updated play button font

--- a/styles/_fonts.scss
+++ b/styles/_fonts.scss
@@ -26,3 +26,7 @@
   font-family: NotoKufiArabic-SemiBold;
   src: url("../fonts/NotoKufiArabic-SemiBold.ttf");
 }
+@font-face {
+  font-family: Asmaa-Font;
+  src: url("../fonts/Asmaa-Font.otf");
+}
