--- a/styles/_style.scss
+++ b/styles/_style.scss
@@ -10,17 +10,20 @@ $icons-gap: 3rem;
 $card-gap: 2rem;
 $card-padding: 1rem;
 $vector-height: 12%;
+
 %fixed-position {
   position: fixed;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
 }
+
 %text {
-  font-family: MochiyPopPOne-Regular;
+  font-family: Khebrat-Musamim-Bold;
   text-transform: capitalize;
   line-height: 6vw;
 }
+
 %overlay {
   width: 100vw;
   height: 100vh;
@@ -28,6 +31,7 @@ $vector-height: 12%;
   z-index: 10000;
   background-color: $overlay;
 }
+
 %phone-child {
   content: "";
   width: 100%;
@@ -35,10 +39,12 @@ $vector-height: 12%;
   position: absolute;
   left: 0;
 }
+
 %card-f-b {
   backface-visibility: hidden;
   box-shadow: 0.3125rem 0.1875rem 0.375rem 0 $shadow-2 inset;
 }
+
 %card-icon {
   height: 5rem;
   max-height: 100%;
@@ -49,12 +55,14 @@ $vector-height: 12%;
   visibility: hidden;
   cursor: pointer;
   box-shadow: 0 0.25rem 0.25rem 0 $shadow-1;
+
   @media (min-width: 768px) {
     & {
       font-size: 2rem;
     }
   }
 }
+
 .icon {
   height: 100%;
   max-height: 3rem;
@@ -67,6 +75,7 @@ $vector-height: 12%;
   border: 0.25rem solid $blue-1;
   border-radius: 27%;
   box-shadow: 0 0.25rem 0.25rem $shadow-1;
+
   .fa-solid {
     filter: drop-shadow(0 0.25rem 0.25rem $shadow-1);
   }
@@ -121,26 +130,30 @@ $vector-height: 12%;
     transition: 0.5s;
   }
 }
+
 .show-success {
   z-index: 1000;
 }
+
 .game {
   width: 100vw;
   height: 100vh;
   padding: $padding;
   position: relative;
   overflow-y: auto;
-  visibility: hidden;
   background-image: url("../media/images/background.svg");
   background-size: cover;
   background-position: 50% 100%;
+
   &.hide {
     animation-name: scaleDown;
     animation-duration: 0.5s;
     animation-iteration-count: 1;
   }
+
   .head {
     height: 15%;
+
     .controls {
       height: 100%;
       position: relative;
@@ -191,6 +204,7 @@ $vector-height: 12%;
       }
     }
   }
+
   .cardContainer {
     height: 60vh;
     @extend %fixed-position;
@@ -278,7 +292,7 @@ $vector-height: 12%;
             transform: rotate(9.266deg);
             background: linear-gradient(177deg, $pink-2 63%, $white-1 118%);
             font-size: 7vh;
-            font-family: Khebrat-Musamim-Bold;
+            font-family: Asmaa-Font;
             text-transform: capitalize;
             border: 0.375rem solid $pink-2;
             outline: 0.2rem solid $blue-2;
@@ -316,6 +330,7 @@ $vector-height: 12%;
       }
     }
   }
+
   .bags {
     width: 35%;
     max-height: 60%;
@@ -324,13 +339,16 @@ $vector-height: 12%;
     left: 50%;
     transform: translateX(-50%);
   }
+
   .body {
     height: 83%;
     visibility: hidden;
     z-index: 100;
+
     &.show {
       visibility: visible;
     }
+
     .arrow {
       width: fit-content;
       min-height: 12%;
@@ -353,27 +371,32 @@ $vector-height: 12%;
         background-color: $white-4;
       }
     }
+
     .body-wrapper {
       flex-grow: 1;
       gap: $card-gap;
+
       .cards {
         max-height: calc((100% - $card-gap) * 0.8);
         position: relative;
         gap: $icons-gap;
+
         .game-card {
           background-color: transparent;
+
           &:nth-of-type(1) {
             .text-wrapper {
               margin-top: $vector-height;
             }
           }
+
           .card-wrapper {
             transform-style: preserve-3d;
             transition: 0.5s;
             background-color: $white-1;
             border: 0.3125rem solid $purple-1;
             box-shadow: 0.1875rem 0.25rem 0.5625rem 0 $shadow-2;
-            transform: translateX(-100vw) rotate(-15deg);
+            transform: translateX(100vw) rotate(15deg);
             cursor: pointer;
 
             &.show {
@@ -401,39 +424,47 @@ $vector-height: 12%;
               animation-iteration-count: 1;
               animation-delay: 0s !important;
             }
+
             .card-front {
               position: absolute;
               top: 0;
               left: 0;
               @extend %card-f-b;
+
               .img {
                 filter: grayscale(1);
               }
             }
+
             .card-back {
               @extend %card-f-b;
               position: relative;
               top: 0;
               transform: rotateY(180deg);
+
               .img-wrapper {
                 height: 80%;
               }
+
               .text {
                 height: 20%;
                 color: $black-1;
                 font-size: 80%;
-                font-family: MochiyPopPOne-Regular;
+                font-family: DG-3asomy-Regular;
                 text-align: center;
+
                 @include mediaQuery($medScreen_min_width) {
                   & {
                     font-size: 1.25rem;
                   }
                 }
+
                 @include mediaQuery($largeScreen_min_width) {
                   & {
-                    font-size: 1.5rem;
+                    font-size: 2rem;
                   }
                 }
+
                 .text-item {
                   &::first-letter {
                     text-transform: capitalize;
@@ -441,21 +472,27 @@ $vector-height: 12%;
                 }
               }
             }
+
             .img {
               object-fit: cover;
+              transform: scaleX(-1);
             }
           }
         }
       }
+
       .icons {
         max-height: calc((100% - $card-gap) * 0.2);
         gap: $icons-gap;
+
         .card-icons {
           width: calc((100% - $icons-gap) / 2);
           padding: 0 0.75rem;
           gap: $icons-gap;
+
           .card-icon {
             @extend %card-icon;
+
             &.sound {
               &.clicked {
                 animation-name: scale;
@@ -464,6 +501,7 @@ $vector-height: 12%;
                 animation-iteration-count: 1;
               }
             }
+
             &.speak {
               &.animate {
                 .outline {
@@ -472,6 +510,7 @@ $vector-height: 12%;
                   animation-iteration-count: infinite;
                 }
               }
+
               .outline {
                 width: 100%;
                 height: 100%;
@@ -479,16 +518,19 @@ $vector-height: 12%;
                 border-radius: 50%;
                 outline: 0.6vw solid transparent;
               }
+
               #delayed {
                 animation-delay: 1.5s;
               }
             }
+
             &.show {
               animation-name: increase;
               animation-duration: 0.5s;
               animation-timing-function: ease;
               animation-iteration-count: 1;
             }
+
             &.hide {
               animation-name: decrease;
               animation-duration: 0.5s;
@@ -500,17 +542,20 @@ $vector-height: 12%;
       }
     }
   }
+
   .game-vector {
     width: 9rem;
     height: 9rem;
     position: fixed;
-    right: 0;
+    left: 0;
     bottom: 0;
     z-index: 1;
     visibility: hidden;
+
     &.show {
       visibility: visible;
     }
+
     @include mediaQuery($medScreen_min_width) {
       & {
         width: 15rem;
@@ -519,11 +564,13 @@ $vector-height: 12%;
     }
   }
 }
+
 .pop-overlay {
   @extend %overlay;
   background-color: $overlay-1;
   visibility: hidden;
 }
+
 .popup {
   width: 70vw;
   height: 40vh;
@@ -535,6 +582,7 @@ $vector-height: 12%;
   text-align: center;
   border-radius: 1rem;
   visibility: hidden;
+
   .phone {
     width: 2.5rem;
     height: 4.5rem;
@@ -557,12 +605,14 @@ $vector-height: 12%;
       bottom: 9%;
     }
   }
+
   .message {
     font-family: DG-3asomy-Regular;
     text-transform: uppercase;
     font-size: 3rem;
   }
 }
+
 .success-wrapper {
   width: 60%;
   @extend %fixed-position;
@@ -615,11 +665,13 @@ $vector-height: 12%;
     position: relative;
     border-top-right-radius: 0 !important;
     background: linear-gradient(180deg, $white-3 33.31%, $yellow-3 117.3%);
+
     @include mediaQuery($largeScreen_min_width) {
       & {
         height: 60vh;
       }
     }
+
     .closeModal {
       width: 11%;
       aspect-ratio: 1;
@@ -651,6 +703,7 @@ $vector-height: 12%;
         position: relative;
         top: -3vh;
       }
+
       .content-card {
         height: 60%;
 
@@ -661,19 +714,20 @@ $vector-height: 12%;
           transform: rotate(-1.5deg);
 
           .text-card {
-            background: linear-gradient(
-              to bottom,
-              transparent 20%,
-              $orange-2 20% 45%,
-              transparent 45% 60%,
-              $orange-3 60% 80%,
-              transparent 80%
-            );
+            background: linear-gradient(to bottom,
+                transparent 20%,
+                $orange-2 20% 45%,
+                transparent 45% 60%,
+                $orange-3 60% 80%,
+                transparent 80%);
             color: $black-1;
             font-size: 140%;
             text-transform: capitalize;
-            font-family: LilitaOne-Regular;
+            font-family: DG-3asomy-Regular;
+
             .content {
+              order: 2;
+
               .text {
                 position: relative;
 
@@ -696,12 +750,14 @@ $vector-height: 12%;
             .score-icon-wrapper {
               width: 4rem;
               height: 80%;
+              order: 1;
             }
           }
         }
 
         .arrows {
           padding: 0.75rem 1rem 0.5rem;
+
           .arrow {
             aspect-ratio: 1;
             padding: 1vh 1.2vw;
@@ -741,6 +797,7 @@ $vector-height: 12%;
     transform: translateZ(-1px) scaleX(1);
   }
 }
+
 @keyframes scaleDown {
   0% {
     top: 50%;
@@ -752,20 +809,25 @@ $vector-height: 12%;
     transform: translate(-50%, -50%) scale(0);
   }
 }
+
 @keyframes flip {
   0% {
     transform: rotateZ(4deg) rotateY(45deg);
   }
+
   30% {
     transform: rotateY(90deg) rotateZ(0);
   }
+
   90% {
     transform: rotateY(180deg) rotateZ(4deg);
   }
+
   100% {
     transform: rotateZ(0) rotateY(180deg);
   }
 }
+
 @keyframes flip-back {
   0% {
     transform: rotateZ(4deg) rotateY(180deg);
@@ -783,41 +845,49 @@ $vector-height: 12%;
     transform: rotateZ(0) rotateY(0);
   }
 }
+
 @keyframes show {
   0% {
-    transform: translateX(-100vw) rotate(-15deg);
+    transform: translateX(100vw) rotate(15deg);
   }
 
   50% {
-    transform: rotate(15deg);
+    transform: rotate(-15deg);
   }
 
   100% {
     transform: translateX(0) rotate(0);
   }
 }
+
 @keyframes scale {
   0% {
     scale: 0.8;
   }
+
   50% {
     scale: 1.1;
   }
+
   100% {
     scale: 1;
   }
 }
+
 @keyframes increase {
   0% {
     scale: 0;
   }
+
   50% {
     scale: 1.1;
   }
+
   100% {
     scale: 1;
   }
 }
+
 @keyframes decrease {
   0% {
     scale: 1;
@@ -831,17 +901,20 @@ $vector-height: 12%;
     scale: 0;
   }
 }
+
 @keyframes pulse {
   0% {
     transform: scale(1);
     outline-color: $pink-3;
     opacity: 1;
   }
+
   100% {
     transform: scale(1.3);
     opacity: 0;
   }
 }
+
 @keyframes successScaleUp {
   0% {
     transform: translate(-50%, -50%) scale(0);
@@ -869,6 +942,7 @@ $vector-height: 12%;
     transform: translate(-50%, -50%) scale(0);
   }
 }
+
 @keyframes rotate {
   0% {
     transform: rotate(0);
@@ -878,15 +952,19 @@ $vector-height: 12%;
     transform: rotate(360deg);
   }
 }
+
 @keyframes rotatePhone {
+
   0%,
   10% {
     transform: rotate(0deg);
   }
+
   40%,
   60% {
     transform: rotate(90deg);
   }
+
   95%,
   100% {
     transform: rotate(0deg);
