--- a/styles/_style.scss
+++ b/styles/_style.scss
@@ -68,7 +68,7 @@ $vector-height: 12%;
   max-height: 3rem;
   aspect-ratio: 1;
   position: relative;
-  z-index: 100;
+  z-index: 1000;
   background: linear-gradient(to bottom, $yellow-3 2%, $yellow-2);
   color: $white-1;
   font-size: 1.25rem;
@@ -124,10 +124,17 @@ $vector-height: 12%;
   &.pause {
     height: 100%;
     position: absolute;
-    left: 0;
+    right: 0;
     top: calc(100vh - (2 * $padding));
     transform: translateY(-100%);
     transition: 0.5s;
+    visibility: hidden;
+
+    .fa-solid {
+      &.hide {
+        display: none;
+      }
+    }
   }
 }
 
@@ -141,13 +148,15 @@ $vector-height: 12%;
   padding: $padding;
   position: relative;
   overflow-y: auto;
-  background-image: url("../media/images/background.svg");
   background-size: cover;
   background-position: 50% 100%;
+  visibility: hidden;
+  transform-origin: left top;
 
-  &.hide {
-    animation-name: scaleDown;
-    animation-duration: 0.5s;
+  &.hideGame {
+    animation-name: hideGame;
+    animation-timing-function: linear;
+    animation-duration: 0.7s;
     animation-iteration-count: 1;
   }
 
@@ -702,6 +711,9 @@ $vector-height: 12%;
         margin: 0 auto;
         position: relative;
         top: -3vh;
+        img {
+          transform: scaleX(-1);
+        }
       }
 
       .content-card {
@@ -714,12 +726,14 @@ $vector-height: 12%;
           transform: rotate(-1.5deg);
 
           .text-card {
-            background: linear-gradient(to bottom,
-                transparent 20%,
-                $orange-2 20% 45%,
-                transparent 45% 60%,
-                $orange-3 60% 80%,
-                transparent 80%);
+            background: linear-gradient(
+              to bottom,
+              transparent 20%,
+              $orange-2 20% 45%,
+              transparent 45% 60%,
+              $orange-3 60% 80%,
+              transparent 80%
+            );
             color: $black-1;
             font-size: 140%;
             text-transform: capitalize;
@@ -795,6 +809,16 @@ $vector-height: 12%;
 
   100% {
     transform: translateZ(-1px) scaleX(1);
+  }
+}
+
+@keyframes hideGame {
+  0% {
+    transform: scale(1);
+  }
+
+  100% {
+    transform: scale(0);
   }
 }
 
@@ -876,29 +900,24 @@ $vector-height: 12%;
 
 @keyframes increase {
   0% {
-    scale: 0;
+    transform: scaleX(0);
   }
-
   50% {
-    scale: 1.1;
+    transform: scaleX(1.15);
   }
-
   100% {
-    scale: 1;
+    transform: scaleX(1);
   }
 }
-
 @keyframes decrease {
   0% {
-    scale: 1;
+    transform: scaleX(1);
   }
-
   50% {
-    scale: 1.1;
+    transform: scaleX(1.15);
   }
-
   100% {
-    scale: 0;
+    transform: scaleX(0);
   }
 }
 
@@ -954,7 +973,6 @@ $vector-height: 12%;
 }
 
 @keyframes rotatePhone {
-
   0%,
   10% {
     transform: rotate(0deg);
