--- a/styles/main.css
+++ b/styles/main.css
@@ -76,45 +76,6 @@ a {
   font-family: Asmaa-Font;
   src: url("../fonts/Asmaa-Font.otf");
 }
-/*$white-1: #fff;
-$black-1: #000;
-$pink-1: #f93065;
-$pink-2: rgba(249, 48, 101, 1);
-$pink-3: linear-gradient($white-1, $pink-2);
-$pink-4: rgba(249, 48, 101, 0);
-$pink-5: #ef0d53;
-$pink-6: #f45780;
-$pink-7: #f00f55;
-$pink-8: #ee3f6c;
-$grey-1: #d1d6ff;
-$grey-2: #777777;
-$yellow-1: #f2d214;
-$yellow-2: #e7a11d;
-$yellow-3: #f0b700;
-$yellow-4: #f8d258;
-$blue-1: #7a88ed;
-$blue-2: #b6e7ff;
-$blue-3: #55a7f3;
-$purple-1: #8363a9;
-$green-1: #cbe6ff;
-$green-2: #1f630a;
-$oranger-1: #fdc927;
-$red-1:#de2413;
-$shadow-1: rgba(0, 0, 0, 0.25);
-$overlay: rgba(0, 0, 0, 0.6);*/
-/*$grey-1: #777777;
-$pink-1: #ff6ecb;
-$pink-2: #ff9ce7;
-$purple-1: #6e63b3;
-$yellow-1: #ffd80d;
-$yellow-2: #f0b700;
-$yellow-3: #febf47;
-$yellow-4: #fce07f;
-$oranger-1: #fdc927;
-$orange-2: rgba(253, 238, 206, 0.2);
-$orange-3: rgba(253, 238, 206, 0.5);
-$blue-1: #399ffe;
-$green-1: rgba(18, 171, 15, 1);*/
 .success-wrapper, .popup, .game .cardContainer, .overlay, .pop-overlay {
   position: fixed;
   top: 50%;
@@ -170,7 +131,7 @@ $green-1: rgba(18, 171, 15, 1);*/
   max-height: 3rem;
   aspect-ratio: 1;
   position: relative;
-  z-index: 100;
+  z-index: 1000;
   background: linear-gradient(to bottom, #febf47 2%, #f0b700);
   color: #fff;
   font-size: 1.25rem;
@@ -217,10 +178,14 @@ $green-1: rgba(18, 171, 15, 1);*/
 .icon.pause {
   height: 100%;
   position: absolute;
-  left: 0;
+  right: 0;
   top: calc(100vh - 3rem);
   transform: translateY(-100%);
   transition: 0.5s;
+  visibility: hidden;
+}
+.icon.pause .fa-solid.hide {
+  display: none;
 }
 
 .show-success {
@@ -233,13 +198,15 @@ $green-1: rgba(18, 171, 15, 1);*/
   padding: 1.5rem;
   position: relative;
   overflow-y: auto;
-  background-image: url("../media/images/background.svg");
   background-size: cover;
   background-position: 50% 100%;
+  visibility: hidden;
+  transform-origin: left top;
 }
-.game.hide {
-  animation-name: scaleDown;
-  animation-duration: 0.5s;
+.game.hideGame {
+  animation-name: hideGame;
+  animation-timing-function: linear;
+  animation-duration: 0.7s;
   animation-iteration-count: 1;
 }
 .game .head {
@@ -695,6 +662,9 @@ $green-1: rgba(18, 171, 15, 1);*/
   position: relative;
   top: -3vh;
 }
+.success-wrapper .success-card .card-wrapper .img-wrapper img {
+  transform: scaleX(-1);
+}
 .success-wrapper .success-card .card-wrapper .content-card {
   height: 60%;
 }
@@ -767,6 +737,14 @@ $green-1: rgba(18, 171, 15, 1);*/
     transform: translateZ(-1px) scaleX(1);
   }
 }
+@keyframes hideGame {
+  0% {
+    transform: scale(1);
+  }
+  100% {
+    transform: scale(0);
+  }
+}
 @keyframes scaleDown {
   0% {
     top: 50%;
@@ -829,24 +807,24 @@ $green-1: rgba(18, 171, 15, 1);*/
 }
 @keyframes increase {
   0% {
-    scale: 0;
+    transform: scaleX(0);
   }
   50% {
-    scale: 1.1;
+    transform: scaleX(1.15);
   }
   100% {
-    scale: 1;
+    transform: scaleX(1);
   }
 }
 @keyframes decrease {
   0% {
-    scale: 1;
+    transform: scaleX(1);
   }
   50% {
-    scale: 1.1;
+    transform: scaleX(1.15);
   }
   100% {
-    scale: 0;
+    transform: scaleX(0);
   }
 }
 @keyframes pulse {
